plugin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: botkube
  namespace: botkube
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: botkube
