plugin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botkube
  namespace: botkube
spec:
  rules:
  - host: botkube.your-vps-ip.nip.io
  http:
    paths:
    - path: /
      pathType: Prefix
      backend:
        service:
          name: botkube
          port:
          number: 8080
